     (#434034 #430382 #463296, Alexander Belchenko)
 * qlog:
   * Avoid a deprecation warning when diffing the first rev in a branch.
     (John Szakmeister)
 * qadd:
   * Properly support adding unversioned files to newly added directory.
     (#418520, Gary van der Merwe)
 * Save the size of Dialogs when the user press Esc. (Bug 417809,
   Gary van der Merwe)


0.14.4 "Kenny" - 2009-10-17
---------------------------
Critical Koala bugfixes.

 * Internal: get rid of old-style classes to be compatible with PyQt 4.6.
   (#447214)
 * qlog:
   * handle revids as plain strings, not unicode. (#452235)
 * qcommit/qrevert: 
   * Fixed a bug were the pending merges graph was being loaded
     twice. (Gary van der Merwe)


0.14.3 - 2009-10-02
-------------------
Bugfixes release.

 * qcommit:
    * Fixed bug with inability of run qcommit /path/to/tree/root after merge.
      (#433137, Alexander Belchenko)
 * qlog:
    * Ensure that tree objects correctly locked when checking for directories.
      (#436467, Gary van der Merwe)


0.14.2 - 2009-09-16
-------------------
Bugfixes.

 * qlog:
    * Fixed couple of problems with proper rendering of branch labels
      when inspecting log for several branches (e.g. in shared repo).
 * qmerge, qcommit, ...:
   * Fixed a bug where we create the QApp after opening a Branch, but we had
     already installed the QUIFactory(). A branch can be a lightweight checkout
     of a remote location which requires a password. Which wants to open a UI
     dialog, which causes a crash because QApp has not been created yet.
     (#430232, John Arbash Meinel)


0.14.1 - 2009-09-10
-------------------
Maintenance release:

 * qannotate:
   * Fixed a bug when annotating a file in a branch with no working tree.
     (Bug 419477)
   * Fixed a bug were the logwidget would crash trying to render some graphs.
     (Bug 417895)
   * Fixed a bug were it was not possible to annotate files that have been
     deleted. (Bug 419790)