@@ -1,0 +1,31 @@
+# -*- coding: utf-8 -*-
+#
+# QBzr - Qt frontend to Bazaar commands
+#
+# Contributors:
+#   Alexander Belchenko, 2009
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+
+from bzrlib.tests import TestCase
+from bzrlib.plugins.qbzr.lib.subprocess import bencode_unicode
+
+
+class TestBencode(TestCase):
+
+    def test_bencode_unicode(self):
+        self.assertEqual(u"l7:versione", bencode_unicode(["version"]))
+        self.assertEqual(u"l3:add3:\u1234e", 
+            bencode_unicode([u"add", u"\u1234"]))
