@@ -15,6 +15,8 @@ Bugfixes and backported bugfixes.
      (#418520, Gary van der Merwe)
  * Save the size of Dialogs when the user press Esc. (Bug 417809,
    Gary van der Merwe)
+ * qsubprocess: new command-line option --bencode to use bencoded command list.
+   (#392920, Alexander Belchenko)
 
 
 0.14.4 "Kenny" - 2009-10-17
